# rue-api

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.override.template.yml  docker-compose.yml  pyproject.toml  swagger.yaml  swaggger.md
.github/: constraints.txt
.github/workflows/: tests.yml
.run/: rue-api.run.xml
app/: __init__.py  celery_app.py  main.py  utils.py
app/alembic/versions/: 13621de95f8d_add_project_and_task_models.py  85f790e4c241_init.py
app/api/: deps.py  main.py
app/api/routes/: login.py  project.py
app/core/: config.py  config_test.py  db.py
app/data/: roads.geojson  site.geojson
app/mock/: .roads.json.kate-swp  general_input.json  main.py  urban_planning_api_v1.yaml
app/mock/01-streets/inputs/: input.json
app/mock/07-building_max/inputs/: input.json
app/models/: __init__.py  project.py  user.py
app/tasks/: generate_rue.py
prompt/endpoints/: testing.md
tests/: conftest.py
tests/api/routes/: test_login.py  test_project.py
tests/utils/: user.py
