[project]
name = "rue-api"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]<1.0.0,>=0.114.2",
    "python-multipart<1.0.0,>=0.0.7",
    "email-validator<3.0.0.0,>=2.1.0.post1",
    "emails<1.0,>=0.6",
    "alembic<2.0.0,>=1.17.1",
    "sqlmodel<1.0.0,>=0.0.21",
    "jinja2<4.0.0,>=3.1.4",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "orjson>=3.10",
    "passlib[bcrypt]<2.0.0,>=1.7.4",
    "sentry-sdk[fastapi]<2.0.0,>=1.40.6",
    # Pin bcrypt until passlib supports the latest
    "bcrypt==4.3.0",
    "pyjwt<3.0.0,>=2.8.0",
]

[tool.uvicorn]
factory = false
host = "0.0.0.0"
port = 8000
reload = true

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = ["app/alembic/*", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PL", "RUF"]
ignore = ["B904"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
