[project]
name = "rue-api"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.114.2,<1.0.0",
    "uvicorn>=0.30,<0.39",
    "jinja2>=3.1.4,<4.0.0",
    "itsdangerous>=2.1.2,<3.0.0",
    "pydantic>=2.9,<3.0.0",
    "pydantic-settings>=2.6,<3.0.0",
    "email-validator>=2.1.0.post1,<3.0.0",
    "orjson>=3.10",
    "python-multipart>=0.0.7,<1.0.0",
    "email-validator>=2.1.0.post1,<3.0.0.0",
    "emails>=0.6,<1.0",
    "alembic>=1.17.1,<2.0.0",
    "sqlmodel>=0.0.21,<0.0.28",
    "SQLAlchemy>=2.0,<2.1",
    "jinja2>=3.1.4,<4.0.0",
    "tenacity>=8.2.3,<9.0.0",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "orjson>=3.10",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "sentry-sdk[fastapi]>=1.40.6,<2.0.0",
    "httpx>=0.27,<0.28",
    # Pin bcrypt until passlib supports newer
    "bcrypt==4.3.0",
    "pyjwt>=2.8.0,<3.0.0",
    "celery[redis]>=5.5.3",
    "redis>=5.0.0,<5.2.2",
    "flower>=2.0.1",
    "gdal==3.10.3",
    "rue-lib @ git+https://github.com/kartoza/rue-lib.git"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3,<9.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "mypy>=1.8.0,<2.0.0",
    "ruff>=0.2.2,<1.0.0",
    "pre-commit>=3.6.2,<4.0.0",
    "types-passlib>=1.7.7.20240106,<2.0.0.0",
    "coverage>=7.4.3,<8.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest<8.0.0,>=7.4.3",
    "pytest-cov>=5.0.0,<6.0.0",
    "mypy<2.0.0,>=1.8.0",
    "ruff<1.0.0,>=0.2.2",
    "pre-commit<4.0.0,>=3.6.2",
    "types-passlib<2.0.0.0,>=1.7.7.20240106",
    "coverage<8.0.0,>=7.4.3",
]

[tool.uvicorn]
factory = false
host = "0.0.0.0"
port = 8000
reload = true

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = ["app/alembic/*", ".venv", "tests/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PL", "RUF"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.coverage.run]
source = ["app"]
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
"rue_lib" = ["data/*"]